<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="document_adjust">Adjust</string>
    <string name="document_back">Back</string>
    <string name="document_delete">Delete</string>
    <string name="document_done">Done</string>
    <string name="document_rotate">Rotate</string>
    <string name="document_save">Save</string>
    <string name="main_setting_ai_image_stab">Image Stabilization (Beta)</string>
    <string name="main_setting_ai_image_stab_summary">Automatically enhance blurry photos</string>
    <string name="main_setting_assistive_grid">Assistive grid</string>
    <string name="main_setting_audio_focus_summary">Amplify audio in the zoomed area of the viewfinder</string>
    <string name="main_setting_audio_zoom">Audio Zoom</string>
    <string name="main_setting_auto_capture_gesture">Gesture Selfie</string>
    <string name="main_setting_auto_capture_gesture_summary">Show your palm to take a selfie</string>
    <string name="main_setting_auto_capture_smile">Auto Smile Capture</string>
    <string name="main_setting_auto_capture_smile_summary">Automatically capture when everyone in the frame is smiling</string>
    <string name="main_setting_auto_focus_tracking">Auto focus tracking</string>
    <string name="main_setting_auto_focus_tracking_summary">Tap the subject to track it automatically. Supports 30 fps video.</string>
    <string name="main_setting_auto_macro">Auto Macro</string>
    <string name="main_setting_auto_macro_summary">Automatically switch to macro camera when shooting macro objects</string>
    <string name="main_setting_category_about">About</string>
    <string name="main_setting_category_ai_settings">AI settings</string>
    <string name="main_setting_category_capture_settings">Capture settings</string>
    <string name="main_setting_category_save_settings">Save settings</string>
    <string name="main_setting_debug_ui">Debug</string>
    <string name="main_setting_dual_screen_animation">Camera Cartoon</string>
    <string name="main_setting_dual_screen_animation_summary">"Show an animation on the quick view display to get your subject's attention"</string>
    <string name="main_setting_dual_screen_preview">Quick View Preview</string>
    <string name="main_setting_dual_screen_review">Instant Review</string>
    <string name="main_setting_dual_screen_review_summary">Show a preview on the quick view display after capturing with the flip open</string>
    <string name="main_setting_external_display">Quick view display</string>
    <string name="main_setting_front_mirror">Selfie photo mirror</string>
    <string name="main_setting_geo_location">Save location</string>
    <string name="main_setting_google_lens">Google Lens</string>
    <string name="main_setting_help_ui">Help</string>
    <string name="main_setting_hevc">Efficient videos</string>
    <string name="main_setting_keep_last_mode">Keep last mode</string>
    <string name="main_setting_keep_last_mode_summary">Open the camera with the last used mode active</string>
    <string name="main_setting_leveler">Leveler</string>
    <string name="main_setting_licenses">Open source licenses</string>
    <string name="main_setting_low_light_ai">Low Light AI</string>
    <string name="main_setting_low_light_ai_summary">Enhance low light selfie photos</string>
    <string name="main_setting_quick_capture_off">Off</string>
    <string name="main_setting_quick_launch">Quick capture</string>
    <string name="main_setting_quick_launch_camera_facing">Gesture opens</string>
    <string name="main_setting_rule_of_thirds_composition">Smart Composition</string>
    <string name="main_setting_scene_detection">Shot Optimization</string>
    <string name="main_setting_scene_detection_summary">Enhance photos with automatic tuning and AI scene detection</string>
    <string name="main_setting_smart_composition_summary">Automatically level and implement the rule of thirds</string>
    <string name="main_setting_smart_noise_cancellation">Smart Noise Cancellation</string>
    <string name="main_setting_smart_noise_cancellation_summary">Reduce wind noise and ambient noise in video recording.</string>
    <string name="main_setting_sound_effect">Shutter sound</string>
    <string name="main_setting_storage">Storage</string>
    <string name="main_setting_tap_anywhere">Tap anywhere to capture</string>
    <string name="main_setting_tutorial_ui">Play tutorial</string>
    <string name="main_setting_watermark">Watermark</string>
    <string name="mcf_bg_processing">Saving…</string>
    <string name="settings_list_about_camera_version_key">settings_list_about_camera_version_key</string>
    <string name="settings_list_about_category_description">Information &amp; help</string>
    <string name="settings_list_about_category_key">settings_list_about_category_key</string>
    <string name="settings_list_about_debug_key">settings_list_about_debug_key</string>
    <string name="settings_list_about_help_key">settings_list_about_help_key</string>
    <string name="settings_list_about_license_key">settings_list_about_license_key</string>
    <string name="settings_list_about_reset_key">settings_list_about_reset_key</string>
    <string name="settings_list_about_reset_title">Reset</string>
    <string name="settings_list_about_tutorial_key">settings_list_about_tutorial_key</string>
    <string name="settings_list_ai_category_description">Smart capture &amp; optimization</string>
    <string name="settings_list_ai_category_key">settings_list_ai_category_key</string>
    <string name="settings_list_ai_gesture_capture_key">com.motorola.camera.auto_gesture_capture</string>
    <string name="settings_list_ai_google_lens_key">com.motorola.camera.google_lens</string>
    <string name="settings_list_ai_image_stab_key">com.motorola.camera.mcf_ai_image_stabilization</string>
    <string name="settings_list_ai_shot_optimization_key">com.motorola.camera.ai_scene_detection</string>
    <string name="settings_list_ai_smart_composition_key">com.motorola.camera.smart_composition</string>
    <string name="settings_list_ai_smile_capture_key">com.motorola.camera.auto_smile_capture</string>
    <string name="settings_list_auto_macro_key">com.motorola.camera.auto_macro</string>
    <string name="settings_list_capture_settings_category_description">Guides &amp; gestures</string>
    <string name="settings_list_capture_settings_category_key">settings_list_capture_settings_category_key</string>
    <string name="settings_list_capture_settings_grid_key">com.motorola.camera.assistive_grid</string>
    <string name="settings_list_capture_settings_keep_last_mode_key">com.motorola.camera.keep_last_mode</string>
    <string name="settings_list_capture_settings_leveler_key">com.motorola.camera.pro_leveler</string>
    <string name="settings_list_capture_settings_shutter_sound_key">com.motorola.camera.shutter_tone</string>
    <string name="settings_list_capture_settings_tap_anywhere_key">com.motorola.camera.capture_tap_anywhere</string>
    <string name="settings_list_external_display_camera_cartoon_key">com.motorola.camera.dual_screen_animation</string>
    <string name="settings_list_external_display_category_description">Quick view display settings</string>
    <string name="settings_list_external_display_category_key">settings_list_external_display_category_key</string>
    <string name="settings_list_external_display_instant_review_key">com.motorola.camera.dual_screen_review</string>
    <string name="settings_list_external_display_preview_key">settings_list_external_display_preview_key</string>
    <string name="settings_list_low_light_key">com.motorola.camera.mcf_ai_low_light_selfie</string>
    <string name="settings_list_off">Off</string>
    <string name="settings_list_photos_category_description">Still photography options</string>
    <string name="settings_list_photos_category_key">settings_list_photos_category_key</string>
    <string name="settings_list_photos_category_title">Photos</string>
    <string name="settings_list_photos_quick_capture_key">settings_list_photos_quick_capture_key</string>
    <string name="settings_list_photos_resolutions_front_key">com.motorola.camera.picture_size_front</string>
    <string name="settings_list_photos_resolutions_front_title">Front photo resolution</string>
    <string name="settings_list_photos_resolutions_rear_key">com.motorola.camera.picture_size_rear</string>
    <string name="settings_list_photos_resolutions_rear_title">Rear photo resolution</string>
    <string name="settings_list_photos_selfie_mirror_key">com.motorola.camera.front_mirror</string>
    <string name="settings_list_photos_watermark_key">settings_list_photos_watermark_key</string>
    <string name="settings_list_quick_capture_enable_key">com.motorola.camera.quick_draw</string>
    <string name="settings_list_quick_capture_layout_key">settings_list_quick_capture_layout_key</string>
    <string name="settings_list_quick_capture_radio_key">settings_list_quick_capture_radio_key</string>
    <string name="settings_list_save_location_key">com.motorola.camera.geo_location_state</string>
    <string name="settings_list_save_settings_category_description">Storage &amp; saving</string>
    <string name="settings_list_save_settings_category_key">settings_list_save_settings_category_key</string>
    <string name="settings_list_storage_key">settings_list_storage_key</string>
    <string name="settings_list_switch_on">On</string>
    <string name="settings_list_tips_key">settings_list_tips_key</string>
    <string name="settings_list_videos_audio_noise_cancellation_key">com.motorola.camera.audio_noise_cancellation_enabled</string>
    <string name="settings_list_videos_audio_zoom_key">com.motorola.camera.audio_zoom_enabled</string>
    <string name="settings_list_videos_auto_focus_tracking_key">com.motorola.camera.auto_focus_tracking</string>
    <string name="settings_list_videos_category_description">Motion capture settings</string>
    <string name="settings_list_videos_category_key">settings_list_videos_category_key</string>
    <string name="settings_list_videos_category_title">Videos</string>
    <string name="settings_list_videos_efficient_video_key">com.motorola.camera.hevc_codec</string>
    <string name="settings_list_water_mark_editor_key">settings_list_water_mark_editor_key</string>
    <string name="settings_list_water_mark_preview_key">settings_list_water_mark_preview_key</string>
    <string name="settings_list_water_mark_signature_enable_key">com.motorola.camera.water_mark</string>
    <string name="settings_list_water_mark_timestamp_key">com.motorola.camera.watermark_timestamp</string>
    <string name="talkback_accept">Accept</string>
    <string name="talkback_delete">Delete</string>
    <string name="talkback_play">Play</string>
    <string name="talkback_reset">Reset</string>
    <string name="watermark_device_watermark">Device watermark</string>
    <string name="watermark_off">Off</string>
    <string name="watermark_preview">Preview</string>
    <string name="watermark_timestamp">Timestamp</string>
    <string name="watermark_timestamp_sub">Show date &amp; time on photos</string>
</resources>