<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android">
    <com.motorola.camera.ui.controls_2020.settings.preferences.TipsPreference android:layout="@layout/settings_tips" android:key="@string/settings_list_tips_key" />
    <com.motorola.camera.ui.controls_2020.settings.preferences.generic.HighlightDropDownCategory android:icon="@drawable/ic_dual_screen_review_category" android:title="@string/main_setting_external_display" android:key="@string/settings_list_external_display_category_key" android:summary="@string/settings_list_external_display_category_description">
        <com.motorola.camera.ui.controls_2020.settings.preferences.generic.HighlightSwitchPreference android:icon="@drawable/ic_dual_screen_review" android:title="@string/main_setting_dual_screen_review" android:key="@string/settings_list_external_display_instant_review_key" android:summary="@string/main_setting_dual_screen_review_summary" />
        <com.motorola.camera.ui.controls_2020.settings.preferences.generic.HighlightSwitchPreference android:icon="@drawable/ic_dual_screen_animation" android:title="@string/main_setting_dual_screen_animation" android:key="@string/settings_list_external_display_camera_cartoon_key" android:summary="@string/main_setting_dual_screen_animation_summary" />
        <com.motorola.camera.ui.controls_2020.settings.preferences.IntSettingListPreference android:icon="@drawable/ic_dual_screen_preview" android:title="@string/main_setting_dual_screen_preview" android:key="@string/settings_list_external_display_preview_key" />
    </com.motorola.camera.ui.controls_2020.settings.preferences.generic.HighlightDropDownCategory>
    <com.motorola.patternlibrary.api.DropDownPreferenceCategory android:icon="@drawable/scene_detect_category" android:title="@string/main_setting_category_ai_settings" android:key="@string/settings_list_ai_category_key" android:summary="@string/settings_list_ai_category_description">
        <SwitchPreferenceCompat android:icon="@drawable/ic_auto_smile_capture_on" android:title="@string/main_setting_auto_capture_smile" android:key="@string/settings_list_ai_smile_capture_key" android:summary="@string/main_setting_auto_capture_smile_summary" />
        <com.motorola.camera.ui.controls_2020.settings.preferences.UpdateModelSwitchComponent android:icon="@drawable/ic_gesture_capture_on" android:title="@string/main_setting_auto_capture_gesture" android:key="@string/settings_list_ai_gesture_capture_key" android:summary="@string/main_setting_auto_capture_gesture_summary" />
        <SwitchPreferenceCompat android:icon="@drawable/smart_composition" android:title="@string/main_setting_rule_of_thirds_composition" android:key="@string/settings_list_ai_smart_composition_key" android:summary="@string/main_setting_smart_composition_summary" />
        <com.motorola.camera.ui.controls_2020.settings.preferences.UpdateModelSwitchComponent android:icon="@drawable/scene_detect_on" android:title="@string/main_setting_scene_detection" android:key="@string/settings_list_ai_shot_optimization_key" android:summary="@string/main_setting_scene_detection_summary" />
        <com.motorola.camera.ui.controls_2020.settings.preferences.UpdateModelSwitchComponent android:icon="@drawable/ic_ai_low_light" android:title="@string/main_setting_low_light_ai" android:key="@string/settings_list_low_light_key" android:summary="@string/main_setting_low_light_ai_summary" />
        <com.motorola.camera.ui.controls_2020.settings.preferences.UpdateModelSwitchComponent android:icon="@drawable/ic_ai_image_stab" android:title="@string/main_setting_ai_image_stab" android:key="@string/settings_list_ai_image_stab_key" android:summary="@string/main_setting_ai_image_stab_summary" />
        <SwitchPreferenceCompat android:icon="@drawable/ic_google_lens" android:title="@string/main_setting_google_lens" android:key="@string/settings_list_ai_google_lens_key" />
        <com.motorola.camera.ui.controls_2020.settings.preferences.UpdateModelSwitchComponent android:icon="@drawable/ic_auto_macro" android:title="@string/main_setting_auto_macro" android:key="@string/settings_list_auto_macro_key" android:summary="@string/main_setting_auto_macro_summary" />
    </com.motorola.patternlibrary.api.DropDownPreferenceCategory>
    <com.motorola.patternlibrary.api.DropDownPreferenceCategory android:icon="@drawable/ic_mode_photo_category" android:title="@string/settings_list_photos_category_title" android:key="@string/settings_list_photos_category_key" android:summary="@string/settings_list_photos_category_description">
        <com.motorola.camera.ui.controls_2020.settings.preferences.ResolutionListPreference android:icon="@drawable/ic_photo_size" android:title="@string/settings_list_photos_resolutions_rear_title" android:key="@string/settings_list_photos_resolutions_rear_key" android:dialogLayout="@layout/resolution_preference_info" />
        <com.motorola.camera.ui.controls_2020.settings.preferences.ResolutionListPreference android:icon="@drawable/ic_photo_size" android:title="@string/settings_list_photos_resolutions_front_title" android:key="@string/settings_list_photos_resolutions_front_key" android:dialogLayout="@layout/resolution_preference_info" />
        <SwitchPreferenceCompat android:icon="@drawable/ic_selfie_mirror_on" android:title="@string/main_setting_front_mirror" android:key="@string/settings_list_photos_selfie_mirror_key" />
        <com.motorola.camera.ui.controls_2020.settings.preferences.WaterMarkPreference android:icon="@drawable/ic_watermark" android:title="@string/main_setting_watermark" android:key="@string/settings_list_photos_watermark_key" android:summary="@string/watermark_off" android:fragment="com.motorola.camera.ui.controls_2020.settings.fragment.WaterMarkPreferencesFragment" />
    </com.motorola.patternlibrary.api.DropDownPreferenceCategory>
    <com.motorola.patternlibrary.api.DropDownPreferenceCategory android:icon="@drawable/ic_mode_video_category" android:title="@string/settings_list_videos_category_title" android:key="@string/settings_list_videos_category_key" android:summary="@string/settings_list_videos_category_description">
        <com.motorola.camera.ui.controls_2020.settings.preferences.DisableSwitchComponent android:icon="@drawable/ic_video_size" android:title="@string/main_setting_hevc" android:key="@string/settings_list_videos_efficient_video_key" />
        <SwitchPreferenceCompat android:icon="@drawable/audio_zoom" android:title="@string/main_setting_audio_zoom" android:key="@string/settings_list_videos_audio_zoom_key" android:summary="@string/main_setting_audio_focus_summary" />
        <SwitchPreferenceCompat android:icon="@drawable/ai_crystal" android:title="@string/main_setting_smart_noise_cancellation" android:key="@string/settings_list_videos_audio_noise_cancellation_key" android:summary="@string/main_setting_smart_noise_cancellation_summary" />
        <SwitchPreferenceCompat android:icon="@drawable/ic_auto_focus_tracking" android:title="@string/main_setting_auto_focus_tracking" android:key="@string/settings_list_videos_auto_focus_tracking_key" android:summary="@string/main_setting_auto_focus_tracking_summary" />
    </com.motorola.patternlibrary.api.DropDownPreferenceCategory>
    <com.motorola.patternlibrary.api.DropDownPreferenceCategory android:icon="@drawable/gesture_capture_category" android:title="@string/main_setting_category_capture_settings" android:key="@string/settings_list_capture_settings_category_key" android:summary="@string/settings_list_capture_settings_category_description">
        <com.motorola.camera.ui.controls_2020.settings.preferences.QuickCapturePreference android:icon="@drawable/ic_quick_capture" android:title="@string/main_setting_quick_launch" android:key="@string/settings_list_photos_quick_capture_key" android:summary="@string/main_setting_quick_capture_off" android:fragment="com.motorola.camera.ui.controls_2020.settings.fragment.QuickCapturePreferencesFragment" />
        <SwitchPreferenceCompat android:icon="@drawable/ic_tap_anywhere_on" android:title="@string/main_setting_tap_anywhere" android:key="@string/settings_list_capture_settings_tap_anywhere_key" />
        <SwitchPreferenceCompat android:icon="@drawable/ic_sound_on" android:title="@string/main_setting_sound_effect" android:key="@string/settings_list_capture_settings_shutter_sound_key" />
        <SwitchPreferenceCompat android:icon="@drawable/ic_grid" android:title="@string/main_setting_assistive_grid" android:key="@string/settings_list_capture_settings_grid_key" />
        <SwitchPreferenceCompat android:icon="@drawable/ic_leveler" android:title="@string/main_setting_leveler" android:key="@string/settings_list_capture_settings_leveler_key" />
        <SwitchPreferenceCompat android:icon="@drawable/ic_retain_settings" android:title="@string/main_setting_keep_last_mode" android:key="@string/settings_list_capture_settings_keep_last_mode_key" android:summary="@string/main_setting_keep_last_mode_summary" />
    </com.motorola.patternlibrary.api.DropDownPreferenceCategory>
    <com.motorola.patternlibrary.api.DropDownPreferenceCategory android:icon="@drawable/ic_storage_category" android:title="@string/main_setting_category_save_settings" android:key="@string/settings_list_save_settings_category_key" android:summary="@string/settings_list_save_settings_category_description">
        <com.motorola.camera.ui.controls_2020.settings.preferences.IntSettingListPreference android:icon="@drawable/ic_storage" android:title="@string/main_setting_storage" android:key="@string/settings_list_storage_key" />
        <com.motorola.camera.ui.controls_2020.settings.preferences.LocationSwitchComponent android:icon="@drawable/ic_location" android:title="@string/main_setting_geo_location" android:key="@string/settings_list_save_location_key" />
    </com.motorola.patternlibrary.api.DropDownPreferenceCategory>
    <com.motorola.patternlibrary.api.DropDownPreferenceCategory android:icon="@drawable/about_category" android:title="@string/main_setting_category_about" android:key="@string/settings_list_about_category_key" android:summary="@string/settings_list_about_category_description">
        <Preference android:title="@string/main_setting_tutorial_ui" android:key="@string/settings_list_about_tutorial_key" />
        <Preference android:title="@string/main_setting_help_ui" android:key="@string/settings_list_about_help_key" android:fragment="com.motorola.camera.ui.controls_2020.settings.fragment.HelpPreferencesFragment" />
        <Preference android:title="@string/main_setting_debug_ui" android:key="@string/settings_list_about_debug_key" android:fragment="com.motorola.camera.ui.controls_2020.settings.fragment.DebugPreferencesFragment" />
        <Preference android:title="@string/settings_list_about_reset_title" android:key="@string/settings_list_about_reset_key" />
        <com.motorola.camera.ui.controls_2020.settings.preferences.LicensePreference android:title="@string/main_setting_licenses" android:key="@string/settings_list_about_license_key" />
        <com.motorola.camera.ui.controls_2020.settings.preferences.CamVersionPreference android:selectable="false" android:key="@string/settings_list_about_camera_version_key" />
    </com.motorola.patternlibrary.api.DropDownPreferenceCategory>
</PreferenceScreen>