<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:id="@id/talkback_root" android:focusable="true" android:focusableInTouchMode="true" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <Button android:id="@id/delete" android:background="@android:color/transparent" android:focusable="true" android:visibility="gone" android:clickable="false" android:layout_width="@dimen/talkback_small_size" android:layout_height="@dimen/talkback_small_size" android:layout_alignParentLeft="true" android:layout_alignParentBottom="true" android:contentDescription="@string/talkback_delete" />
    <Button android:id="@id/accpet" android:background="@android:color/transparent" android:focusable="true" android:visibility="gone" android:clickable="false" android:layout_width="@dimen/talkback_small_size" android:layout_height="@dimen/talkback_small_size" android:layout_alignParentLeft="true" android:layout_alignParentBottom="true" android:contentDescription="@string/talkback_accept" />
    <Button android:id="@id/play" android:background="@android:color/transparent" android:focusable="true" android:visibility="gone" android:clickable="false" android:layout_width="@dimen/talkback_small_size" android:layout_height="@dimen/talkback_small_size" android:layout_alignParentLeft="true" android:layout_alignParentBottom="true" android:contentDescription="@string/talkback_play" />
    <RelativeLayout android:id="@id/layout_capture_review" android:focusable="true" android:visibility="gone" android:clickable="false" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_centerHorizontal="true" />
    <LinearLayout android:orientation="horizontal" android:id="@id/mode_carousel_id" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_alignParentBottom="true" />
    <Button android:id="@id/reload" android:background="@android:color/transparent" android:focusable="true" android:visibility="gone" android:clickable="false" android:layout_width="@dimen/talkback_slider_size" android:layout_height="@dimen/talkback_slider_size" android:layout_alignParentBottom="true" android:contentDescription="@string/talkback_reset" android:layout_alignParentEnd="true" />
    <RelativeLayout android:id="@id/mode_menu_id" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_alignParentBottom="true" />
</RelativeLayout>