<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ImageButton android:id="@id/back_button" android:background="@android:color/transparent" android:layout_width="@dimen/doc_edit_btn_size" android:layout_height="@dimen/doc_edit_btn_size" android:src="@drawable/ic_arrow_back" android:layout_alignParentTop="true" android:contentDescription="@string/document_back" android:rotationY="@integer/mirror_flip" android:layout_marginStart="@dimen/doc_back_btn_margin" android:layout_alignParentStart="true" />
    <ImageButton android:id="@id/delete_button" android:background="@android:color/transparent" android:layout_width="@dimen/doc_edit_btn_size" android:layout_height="@dimen/doc_edit_btn_size" android:src="@drawable/ic_delete" android:layout_alignParentTop="true" android:contentDescription="@string/document_delete" android:layout_marginEnd="@dimen/doc_back_btn_margin" android:layout_alignParentEnd="true" />
    <RelativeLayout android:id="@id/review_page" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_below="@id/back_button">
        <LinearLayout android:orientation="vertical" android:id="@id/adjust_control_button" android:layout_width="fill_parent" android:layout_height="@dimen/doc_edit_controller_height" android:layout_alignParentBottom="true">
            <com.motorola.camera.editor.ui.FilterButtonView android:id="@id/filter_buttons" android:layout_width="fill_parent" android:layout_height="@dimen/doc_edit_btn_height">
                <LinearLayout android:layout_gravity="center_vertical" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" />
            </com.motorola.camera.editor.ui.FilterButtonView>
            <RelativeLayout android:layout_width="fill_parent" android:layout_height="@dimen/doc_edit_actions_height">
                <Button android:textColor="@color/doc_editor_txt_color" android:gravity="end|center" android:id="@id/adjust_button" android:background="@drawable/doc_editor_btn_bg" android:layout_width="wrap_content" android:layout_height="@dimen/doc_edit_btn_height" android:text="@string/document_adjust" android:drawablePadding="@dimen/doc_edit_btn_margin_center" android:layout_centerVertical="true" android:contentDescription="@string/document_adjust" android:textAllCaps="false" android:drawableStart="@drawable/crop_doc" android:paddingStart="@dimen/doc_edit_btn_margin_left" android:paddingEnd="@dimen/doc_edit_btn_margin_right" android:layout_marginStart="@dimen/doc_review_margin_h" android:layout_alignParentStart="true" />
                <Button android:textColor="@color/doc_editor_save_color" android:gravity="end|center" android:id="@id/save_button" android:background="@drawable/doc_editor_save_bg" android:layout_width="wrap_content" android:layout_height="@dimen/doc_edit_btn_height" android:text="@string/document_save" android:drawablePadding="@dimen/doc_edit_btn_margin_center" android:layout_centerVertical="true" android:contentDescription="@string/document_save" android:textAllCaps="false" android:drawableStart="@drawable/doc_editor_btn_save_bg_color" android:paddingStart="@dimen/doc_edit_btn_margin_left" android:paddingEnd="@dimen/doc_edit_btn_margin_right" android:layout_marginEnd="@dimen/doc_review_margin_h" android:layout_alignParentEnd="true" />
                <ImageButton android:gravity="center" android:id="@id/rotate_button" android:background="@android:color/transparent" android:layout_width="@dimen/doc_edit_btn_size" android:layout_height="@dimen/doc_edit_btn_size" android:scaleType="centerInside" android:layout_centerInParent="true" android:contentDescription="@string/document_rotate" />
            </RelativeLayout>
        </LinearLayout>
        <com.motorola.camera.editor.ui.ScaleImageView android:id="@id/review_image" android:background="@android:color/black" android:layout_width="fill_parent" android:layout_height="fill_parent" android:scaleType="matrix" android:layout_above="@id/adjust_control_button" android:layout_centerInParent="true" />
    </RelativeLayout>
    <RelativeLayout android:id="@id/adjust_page" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_below="@id/back_button">
        <ImageView android:id="@id/adjust_image" android:visibility="visible" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_centerInParent="true" />
        <com.motorola.camera.editor.ui.DocRectangleView android:id="@id/crop_rect" android:visibility="visible" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_centerInParent="true" />
        <com.motorola.camera.editor.ui.AdjustingMagnifier android:id="@id/adjust_magnifier" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_centerInParent="true" />
        <RelativeLayout android:layout_width="fill_parent" android:layout_height="@dimen/doc_edit_actions_height" android:layout_alignParentBottom="true">
            <Button android:textColor="@color/doc_btn_text_color" android:gravity="end|center" android:id="@id/done_button" android:background="@drawable/doc_editor_btn_bg" android:layout_width="wrap_content" android:layout_height="@dimen/doc_edit_btn_height" android:text="@string/document_done" android:drawablePadding="@dimen/doc_edit_btn_margin_center" android:layout_centerInParent="true" android:contentDescription="@string/document_done" android:textAllCaps="false" android:drawableStart="@drawable/doc_editor_btn_done_bg_color" android:paddingStart="@dimen/doc_edit_btn_margin_left" android:paddingEnd="@dimen/doc_edit_btn_margin_right" />
        </RelativeLayout>
    </RelativeLayout>
    <ProgressBar android:theme="@style/CircularProgress" android:id="@id/save_spinner" android:visibility="gone" android:layout_width="@dimen/doc_progress_bar_size" android:layout_height="@dimen/doc_progress_bar_size" android:indeterminate="true" android:indeterminateBehavior="cycle" android:layout_centerHorizontal="true" android:layout_centerVertical="true" style="@style/CircularProgress" />
    <TextView android:textSize="@dimen/doc_text_size" android:textStyle="bold" android:textColor="@android:color/white" android:id="@id/text_spinner" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/doc_edge_margin" android:text="@string/mcf_bg_processing" android:layout_below="@id/save_spinner" android:layout_centerHorizontal="true" android:textAlignment="center" />
</RelativeLayout>